Fixed some files loading issue

--- a/index.html
+++ b/index.html
@@ -347,6 +347,6 @@
       </section>
     </main>
   </body>
-  <script src="/javascript/interact.js"></script>
-  <script src="/javascript/navToggle.js"></script>
+  <script src="./javascript/navToggle.js"></script>
+  <script src="./javascript/interact.js"></script>
 </html>
