Fixed toggle issue in the book-ask part

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <section class="section interact-section">
         <div class="interact-content section-content">
           <div class="interact-title">
-            <div class="book-ask" id="book-call">
+            <div class="book-ask active" id="book-call">
               <i class="fas fa-phone-alt"></i>
               <h2 class="book-ask-title">Book a call with the expert</h2>
             </div>
@@ -154,7 +154,7 @@
               </ul>
             </div>
           </div>
-          <div class="part-ask-expert" id="part-ask-expert">
+          <div class="part-ask-expert active" id="part-ask-expert">
             <div class="part-ask">
               <span class="Q-A">Q.</span>
               <div class="ques-ans">
